--- a/Jeopardy-Multiplayer/package.json
+++ b/Jeopardy-Multiplayer/package.json
@@ -14,7 +14,9 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.4.1",
-    "react-router-dom": "^6.26.1"
+    "react-router-dom": "^6.26.1",
+    "stream-chat": "^8.38.0",
+    "stream-chat-react": "^11.23.6"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
