--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,8 @@
     "express-validator": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.8.0",
-    "mongoose": "^8.4.4"
+    "mongoose": "^8.4.4",
+    "stream-chat": "^8.38.0",
+    "stream-chat-react": "^11.23.6"
   }
 }
