--- a/client/.gitignore
+++ b/client/.gitignore
@@ -8,9 +8,11 @@ pnpm-debug.log*
 lerna-debug.log*
 
 node_modules
+credentials.js
 dist
 dist-ssr
 *.local
+
 
 # Editor directories and files
 .vscode/*
