--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.8.0",
     "mongoose": "^8.4.4",
+    "nodemon": "^3.1.4",
     "stream-chat": "^8.38.0",
     "stream-chat-react": "^11.23.6",
     "uuid": "^10.0.0"
