--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.4.1",
     "react-router-dom": "^6.26.1",
+    "react-spinners": "^0.14.1",
     "stream-chat": "^8.38.0",
     "stream-chat-react": "^11.23.6"
   },
